Fix notification header spacing

--- a/styles/controls.less
+++ b/styles/controls.less
@@ -48,7 +48,6 @@
 
 .sheet-toolbar{
   border: none;
-  margin-bottom: 8px;
   .btn-toolbar{
     border-radius: @btn-border-radius!important;
     padding: @btn-padding;
